--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello, Webpack!</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="app"></div>
